--- a/styles/style.css
+++ b/styles/style.css
@@ -1,28 +1,15 @@
-.spinner {
-  width: 40px;
-  height: 40px;
-  position: relative;
-  margin: 20px auto;
+.user-info {
+  display: flex;
+  justify-content: flex-start;
+  background-color: rgb(5, 19, 19);
+  color: aliceblue;
 }
-
-.double-bounce1, .double-bounce2 {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: #4CAF50;
-  opacity: 0.6;
-  position: absolute;
-  top: 0;
-  left: 0;
-  
-  animation: bounce 2s infinite ease-in-out;
+ img{
+   width: 100px;
+   height: 100px;
+   border-radius: 50%;
 }
-
-.double-bounce2 {
-  animation-delay: -1s;
-}
-
-@keyframes bounce {
-  0%, 100% { transform: scale(0); }
-  50% { transform: scale(1); }
+#profile {
+  background-color: rgb(53, 54, 54);
+  width: 50px;
 }
