--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,40 @@
-.user-info {
+
+body {
+  background-color: black;
+  color: white;
+  margin: 0;
+  font-family: sans-serif;
+}
+.app {
   display: flex;
-  justify-content: flex-start;
-  background-color: rgb(5, 19, 19);
-  color: aliceblue;
+  flex-direction: column;
+  gap: 20px;
 }
- img{
-   width: 100px;
-   height: 100px;
-   border-radius: 50%;
+
+.user-info {
+  width: 500px;
+  background-color: rgb(48, 50, 53);
+  margin:  13px auto;
+  display: flex;
+  justify-content: space-around;
+  border-radius: 12px;
 }
-#profile {
-  background-color: rgb(53, 54, 54);
-  width: 50px;
+
+.card-img {
+  flex: 1;
+  padding: 20px;
 }
+
+.card-img img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+}
+.card-info {
+  flex: 2; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 20px;
+}
+
